# data2050-how-to-pr

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/raw/: log.txt
data2050/: __init__.py  config.py  dataset.py  features.py  plots.py
data2050/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
